--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,93 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Niknaz Sadehvandi — Cybersecurity Analyst Portfolio</title>
 
-  <link rel="stylesheet" href="styles.css" />
-
-  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst with hands-on SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk." />
+  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst with hands-on SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk. MITRE ATT&CK, NIST, SOX ITGC." />
   <meta name="robots" content="index,follow" />
 
-  <style>
-    :root{
-      --bg:#ffffff;
-      --text:#0f172a;
-      --muted:#334155;
-      --border:#e2e8f0;
-      --soft:#f8fafc;
-      --accent:#0ea5e9;
-      --accent2:#22c55e;
-      --shadow:0 1px 0 rgba(15,23,42,.04);
-      --radius:14px;
-    }
-    *{box-sizing:border-box}
-    body{
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      line-height:1.55;
-      color:var(--text);
-      margin:0;
-      background:var(--bg);
-    }
-    .wrap{max-width:980px;margin:0 auto;padding:34px 20px}
-    header{padding-bottom:10px}
-    h1{font-size:42px;letter-spacing:-.02em;margin:0 0 6px}
-    h2{font-size:18px;font-weight:650;color:var(--accent2);margin:0 0 16px}
-    .meta{color:var(--muted);font-size:14px;margin:0 0 14px}
-    p.lead{font-size:18px;color:var(--muted);margin:0 0 18px;max-width:78ch}
-    .btnrow{display:flex;flex-wrap:wrap;gap:12px;margin:18px 0 28px}
-    .btn{
-      display:inline-block;
-      padding:10px 14px;
-      border:1px solid var(--border);
-      border-radius:12px;
-      text-decoration:none;
-      color:var(--text);
-      background:#fff;
-      box-shadow:var(--shadow);
-    }
-    .btn:hover{background:var(--soft)}
-    .btn.primary{
-      border-color:rgba(14,165,233,.35);
-      background:rgba(14,165,233,.07);
-    }
-    .btn.primary:hover{background:rgba(14,165,233,.12)}
-    .section{margin-top:26px}
-    h3{margin:22px 0 10px;font-size:18px}
-    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(270px,1fr))}
-    .card{
-      border:1px solid var(--border);
-      border-radius:var(--radius);
-      padding:16px;
-      background:#fff;
-      box-shadow:var(--shadow);
-    }
-    .card h4{margin:0 0 8px;font-size:16px}
-    .card p{margin:0;color:var(--muted)}
-    .tags{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-    .tag{
-      font-size:12px;
-      padding:4px 8px;
-      border:1px solid var(--border);
-      border-radius:999px;
-      color:var(--muted);
-      background:#fff;
-    }
-    ul.clean{margin:8px 0 0 18px;color:var(--muted)}
-    ul.clean li{margin:6px 0}
-    .cols{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(290px,1fr))}
-    .small{font-size:13px;color:var(--muted)}
-    .kbd{
-      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-      font-size:12px;
-      padding:2px 6px;
-      border:1px solid var(--border);
-      border-bottom-width:2px;
-      border-radius:8px;
-      background:var(--soft);
-      color:#111827;
-    }
-    footer{margin-top:40px;font-size:14px;color:#64748b}
-    .split{display:flex;flex-wrap:wrap;gap:10px;align-items:center}
-    .split a{word-break:break-word}
-  </style>
+  <meta property="og:title" content="Niknaz Sadehvandi — Cybersecurity Analyst Portfolio" />
+  <meta property="og:description" content="Elastic SIEM • Sysmon • Zeek • SOC Investigations • Splunk • MITRE ATT&CK • NIST • SOX ITGC" />
+  <meta property="og:type" content="website" />
+
+  <link rel="icon" href="assets/favicon.png" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -102,7 +23,8 @@
       <h2>Cybersecurity Analyst • SIEM • Endpoint Telemetry • SOC Investigations</h2>
 
       <p class="meta">
-        Matthews, NC • <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> •
+        Matthews, NC •
+        <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> •
         <a href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a> •
         <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
       </p>
@@ -110,7 +32,7 @@
       <p class="lead">
         Cybersecurity Analyst with hands-on experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
         Founder of Nikki IT &amp; Security Consulting, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry,
-        and Windows security assessments aligned with MITRE ATT&amp;CK.
+        and Windows security assessments aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC.
       </p>
 
       <div class="btnrow">
@@ -123,186 +45,65 @@
       </div>
 
       <p class="small">
-        Keep the PDF name exactly <span class="kbd">Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf</span> in the same repo folder as this page.
+        Keep the PDF name exactly <span class="kbd">Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf</span> in the same folder as this page.
       </p>
     </header>
 
     <section id="projects" class="section">
       <h3>Featured Projects</h3>
-
       <div class="grid">
         <article class="card">
           <h4>Elastic SIEM Endpoint Pipeline (Sysmon + Fleet)</h4>
-          <p>
-            Engineered a Fleet-managed endpoint telemetry pipeline using Sysmon v15+; ingested process creation, network connection,
-            and PowerShell events; validated SOC visibility with KQL.
-          </p>
+          <p>Fleet-managed endpoint telemetry using Sysmon; validated SOC visibility with KQL.</p>
           <div class="tags">
-            <span class="tag">Elastic SIEM</span><span class="tag">Sysmon</span><span class="tag">KQL</span><span class="tag">SOC</span>
+            <span class="tag">Elastic SIEM</span><span class="tag">Sysmon</span><span class="tag">KQL</span>
           </div>
         </article>
 
         <article class="card">
           <h4>Zeek Network Telemetry Ingestion (Filebeat)</h4>
-          <p>
-            Deployed Zeek sensor on Ubuntu 24.04; ingested 1,500+ structured network events into Elastic SIEM via Filebeat;
-            validated real-time telemetry in Kibana Discover.
-          </p>
+          <p>Deployed Zeek on Ubuntu; ingested 1,500+ network events into Elastic SIEM via Filebeat; validated in Kibana Discover.</p>
           <div class="tags">
-            <span class="tag">Zeek</span><span class="tag">Filebeat</span><span class="tag">Elastic</span><span class="tag">Network Logs</span>
-          </div>
-        </article>
-
-        <article class="card">
-          <h4>Windows Endpoint Security Audit &amp; Hardening</h4>
-          <p>
-            Conducted endpoint security audits analyzing authentication failures, firewall rules, and active connections;
-            validated outbound traffic and delivered hardening recommendations.
-          </p>
-          <div class="tags">
-            <span class="tag">Windows Event Logs</span><span class="tag">Hardening</span><span class="tag">Defense</span>
+            <span class="tag">Zeek</span><span class="tag">Filebeat</span><span class="tag">Elastic</span>
           </div>
         </article>
 
         <article class="card">
           <h4>SOC Dashboarding &amp; Alert Triage (Splunk)</h4>
-          <p>
-            Built dashboards and detections for Windows security events; created triage views to spot anomalous authentication
-            and system activity.
-          </p>
+          <p>Built dashboards and detections for Windows security events to support triage workflows.</p>
           <div class="tags">
             <span class="tag">Splunk</span><span class="tag">SIEM</span><span class="tag">Detection</span>
           </div>
-        </article>
-
-        <article class="card">
-          <h4>Network Recon &amp; SOC Automation (Python + Nmap)</h4>
-          <p>
-            Developed an automation wrapper for Nmap-based discovery with structured output and report generation.
-          </p>
-          <div class="tags">
-            <span class="tag">Python</span><span class="tag">Nmap</span><span class="tag">Automation</span>
-          </div>
-        </article>
-
-        <article class="card">
-          <h4>Entry-Level DFIR &amp; Incident Investigation Labs</h4>
-          <p>
-            Investigated DFIR scenarios involving IIS logs, Base64 decoding, SSH-based exfiltration, and endpoint artifacts
-            using Autopsy, FTK Imager, and Wireshark.
-          </p>
-          <div class="tags">
-            <span class="tag">DFIR</span><span class="tag">Autopsy</span><span class="tag">FTK Imager</span><span class="tag">Wireshark</span>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section class="section">
-      <h3>Experience</h3>
-
-      <div class="grid">
-        <article class="card">
-          <h4>Nikki IT &amp; Security Consulting — Founder &amp; Cybersecurity Consultant</h4>
-          <p class="small"><em>Dec 2025 – Present • Remote</em></p>
-          <ul class="clean">
-            <li>Engineered Fleet-managed Elastic SIEM endpoint pipeline using Sysmon v15+; ingested process creation, network connection, and PowerShell events; validated SOC visibility using KQL.</li>
-            <li>Deployed Zeek network sensor on Ubuntu 24.04; ingested 1,500+ structured network events into Elastic SIEM via Filebeat; validated real-time telemetry in Kibana Discover.</li>
-            <li>Conducted Windows endpoint security audits analyzing authentication failures, firewall rules, and active connections; validated outbound traffic and delivered hardening recommendations.</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h4>Sunset Auto Sales — Cybersecurity / IT Support Technician</h4>
-          <p class="small"><em>March 2019 – Present • Charlotte area</em></p>
-          <ul class="clean">
-            <li>Supported and secured Windows endpoints; performed malware investigations, MFA enforcement, endpoint troubleshooting, and system imaging.</li>
-            <li>Maintained security documentation and resolved high-volume support tickets across operational systems.</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h4>Kafpoush — IT Administrator / Helpdesk</h4>
-          <p class="small"><em>Oct 2011 – Feb 2016</em></p>
-          <ul class="clean">
-            <li>Executed malware remediation, patch management, access control updates, and forensic-style system checks.</li>
-            <li>Provided Tier 1–2 support, incident documentation, and endpoint maintenance.</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <h4>Ganjineh — Technical Assistant</h4>
-          <p class="small"><em>Oct 2008 – July 2010</em></p>
-          <ul class="clean">
-            <li>Installed and supported CCTV, access control systems, and network infrastructure; performed troubleshooting and routine maintenance.</li>
-          </ul>
         </article>
       </div>
     </section>
 
     <section id="skills" class="section">
       <h3>Skills</h3>
-
       <div class="cols">
         <div class="card">
           <strong>SIEM &amp; Log Analysis</strong>
           <ul class="clean">
             <li>Elastic SIEM, Filebeat, KQL</li>
             <li>Splunk, Sysmon, Windows Event Logs</li>
-            <li>Zeek network telemetry</li>
+            <li>Zeek telemetry</li>
           </ul>
         </div>
-
         <div class="card">
-          <strong>Detection &amp; Investigation</strong>
-          <ul class="clean">
-            <li>MITRE ATT&amp;CK alignment</li>
-            <li>Alert triage and log analysis</li>
-            <li>Authentication monitoring</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <strong>Endpoint, DFIR, and Tools</strong>
+          <strong>DFIR &amp; Tools</strong>
           <ul class="clean">
             <li>Autopsy, FTK Imager, Autoruns</li>
-            <li>Wireshark, Nmap, Nessus/Tenable</li>
+            <li>Wireshark, Nmap, Nessus/Tenable (lab)</li>
             <li>VirusTotal</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <strong>Scripting &amp; Platforms</strong>
-          <ul class="clean">
-            <li>Python, PowerShell, Bash</li>
-            <li>Windows, Linux, Active Directory</li>
-            <li>AWS/Azure fundamentals</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section class="section">
-      <h3>Education</h3>
-      <ul class="clean">
-        <li><strong>M.S. Cybersecurity Technology</strong> — University of Maryland Global Campus (GPA 4.0; President’s List)</li>
-        <li><strong>B.S. Information Technology</strong> — University of Phoenix (Magna Cum Laude)</li>
-        <li><strong>A.A. Information Technology</strong> — Central Piedmont Community College</li>
-        <li><strong>A.S. Architectural Drawing</strong> — Islamic Azad University</li>
-      </ul>
-    </section>
-
-    <section class="section">
-      <h3>Certifications &amp; Training</h3>
-      <ul class="clean">
-        <li>Python Basics for Data Science — IBM</li>
-      </ul>
-    </section>
-
     <section id="contact" class="section">
       <h3>Contact</h3>
       <div class="split">
-        <a class="btn" href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a>
+        <a class="btn" href="mailto:sadvandniknaz0@gmail.com">Email</a>
         <a class="btn" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
         <a class="btn" href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a>
       </div>
@@ -318,4 +119,3 @@
   </script>
 </body>
 </html>
-```
