--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Niknaz Sadehvandi — Cybersecurity Analyst Portfolio</title>
 
-  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst with hands-on SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk. MITRE ATT&CK, NIST, SOX ITGC." />
+  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk. MITRE ATT&CK, NIST, SOX ITGC." />
   <meta name="robots" content="index,follow" />
 
   <meta property="og:title" content="Niknaz Sadehvandi — Cybersecurity Analyst Portfolio" />
@@ -30,10 +30,10 @@
       </p>
 
       <p class="lead">
-        Cybersecurity Analyst with hands-on experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
-        Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry,
-        and Windows security assessments aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC.
-      </p>
+  Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
+  Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry,
+  and Windows security assessments aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC.
+</p>
 
       <div class="btnrow">
         <a class="btn primary" href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
@@ -73,8 +73,8 @@
         </article>
 
         <article class="card">
-          <h4>Windows Intrusion Forensics (DFIR Lab)</h4>
-          <p>Investigated a simulated web server intrusion using IIS logs, Base64 decoding, SSH-based exfiltration review, and persistence analysis with Autoruns, FTK Imager, and Autopsy.</p>
+          <h4>Windows Intrusion Forensics (DFIR)</h4>
+          <p>Investigated a web server intrusion scenario using IIS logs, Base64 decoding, SSH-based exfiltration review, and persistence analysis with Autoruns, FTK Imager, and Autopsy.</p>
           <div class="tags">
             <span class="tag">DFIR</span><span class="tag">Autopsy</span><span class="tag">FTK Imager</span>
           </div>
@@ -90,7 +90,7 @@
 
         <article class="card">
           <h4>IOC Hunting &amp; Threat Intelligence Enrichment</h4>
-          <p>Processed and enriched tens of thousands of indicators in a lab setting, performed reputation checks, and extracted IOCs to simulate CTI workflows supporting SOC investigations.</p>
+         <p>Processed and enriched tens of thousands of indicators, performed reputation checks, and extracted IOCs to support CTI enrichment workflows for SOC investigations.</p>
           <div class="tags">
             <span class="tag">Threat Intel</span><span class="tag">IOC</span><span class="tag">Enrichment</span>
           </div>
@@ -124,7 +124,7 @@
           <ul class="clean">
             <li>Wireshark packet analysis</li>
             <li>Nmap scanning and profiling</li>
-            <li>Nessus/Tenable (lab)</li>
+            <li>Nessus/Tenable</li>
           </ul>
         </div>
 
@@ -142,7 +142,7 @@
           <ul class="clean">
             <li>MITRE ATT&amp;CK mapping</li>
             <li>NIST-aligned security recommendations</li>
-            <li>Familiarity with SOX ITGC controls</li>
+            <li>SOX ITGC controls</li>
           </ul>
         </div>
       </div>
